[tool.poetry]
name = "throat"
version = "1.0.0"
description = "Open Source Link Aggregator"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.0"
beautifulsoup4 = "^4.9.3"
boto3 = "^1.16.43"
captcha = "^0.5.0"
cryptography = ">=42.0.0"
email-validator = "^1.3.1"
fasteners = "^0.18"
feedgen = "^0.9.0"
flask = "^2.2.5"
flask-babel = "^2.0.0"
flask-caching = "^2.0"
flask-cloudy = "^1.1.0"
flask-jwt-extended = "^4.4.0"
flask-limiter = "^1.4"
flask-login = "^0.6.0"
flask-mail = "^0.9.1"
flask-redis = "^0.4.0"
flask-socketio = "^5.3"
flask-talisman = "^0.7.0"
flask-webpack = "^0.1.0"
flask-wtf = "^1.1"
gevent = "^23.9.0"
gevent-websocket = "^0.10.1"
gunicorn = "^22.0.0"
misaka = "^2.1.1"
mutagen = "^1.46.0"
oic = "^1.5.0"
peewee = "^3.15.4"
peewee-migrate = "^1.6.6"
pillow = "^10.2.0"
psycogreen = "^1.0.2"
psycopg2 = "^2.8.6"
pyfcm = "^1.5.4"
pyotp = "^2.4.1"
python-keycloak = "^4.0.0"
python-magic = "^0.4.27"
pyyaml = "^5.4"
qrcode = "^7.4.2"
redis = "^3.5.3"
requests = "^2.28.2"
sendgrid = "^6.9.7"
tinycss2 = "1.0.2"
wheezy-extractor = "^1.0.1"
wheezy-html = "^3.0.1"
wheezy-template = "^3.1.0"
wtforms = "^3.0.1"


[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "^6.0.0"
mock = "^5.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-flask = "^1.2.0"
pyrsistent = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
